--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -15,6 +15,11 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+
+    HashMap-Encode-Job:
+    runs-on: ubuntu-latest
+    steps:
       - run: python3 --version
       - run: apt-get update -qy
       - run: apt-get install -y python3-pip
@@ -23,6 +28,6 @@ jobs:
       - run: pip3 install numpy
       - run: pip3 install sympy
       - run: pip3 list
-      - pip3 install Cython --install-option="--no-cython-compile"
+      - run: pip3 install Cython --install-option="--no-cython-compile"
       - run: python3 main.py
 
