--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -21,8 +21,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: python3 --version
-      - run: apt-get update -qy
-      - run: apt-get install -y python3-pip
+      - run: sudo apt-get update -qy
+      - run: sudo apt-get install -y python3-pip
       - run: pip3 --version
       - run: pip3 install scikit-image
       - run: pip3 install numpy
