--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -20,6 +20,8 @@ jobs:
   HashMap-Encode-Job:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out repository code
+        uses: actions/checkout@v2
       - run: python3 --version
       - run: sudo apt-get update -qy
       - run: sudo apt-get install -y python3-pip
